[SA-293]: Fixed alignment issues so it can be chosen by component.

--- a/src/components/card-dropdown-menu/card-dropdown-menu.module.css
+++ b/src/components/card-dropdown-menu/card-dropdown-menu.module.css
@@ -69,3 +69,13 @@
     left: 50%;
     transform: translateX(-50%);
 }
+
+.dropdown-menu__options.position-left
+{
+    left: unset;
+}
+
+.dropdown-menu__options.position-right
+{
+    right: unset;
+}
